@@ -1,3 +1,7 @@
+2004-09-27  Kenichi Handa  <handa@m17n.org>
+
+	* HELLO.html: Add Sinhala.
+
 2004-09-23  Kenichi Handa  <handa@m17n.org>
 
 	* HELLO.utf8, HELLO.xml: Add Sinhala.
